--- a/Face_Verification/requirements.txt
+++ b/Face_Verification/requirements.txt
@@ -1,9 +1,7 @@
-opencv-python==4.5.3.56
-dlib==19.22.0
-deepface==0.0.1
-tensorflow==2.8.0
-numpy==1.21.5
-matplotlib==3.5.1
-flask==2.0.2
-requests==2.26.0
-imutils==0.5.4
+deepface==0.0.83
+mediapipe==0.10.9
+opencv-python==4.9.0.80
+matplotlib==3.8.3
+numpy==1.26.4
+tensorflow==2.12.0 ; platform_system != 'Windows'  # Windows doesn't support tf 2.12.0 via pip
+tensorflow-cpu==2.12.0 ; platform_system == 'Windows'  # Use CPU version if you're on Windows
