--- a/Face_Verification/requirements.txt
+++ b/Face_Verification/requirements.txt
@@ -1,6 +1,7 @@
 deepface==0.0.83
-mediapipe
+mediapipe==0.10.9
 opencv-python==4.9.0.80
 matplotlib==3.8.3
 numpy==1.26.4
-tensorflow==2.12.0 
+tensorflow==2.12.0 ; platform_system != 'Windows'  # Windows doesn't support tf 2.12.0 via pip
+tensorflow-cpu==2.12.0 ; platform_system == 'Windows'  # Use CPU version if you're on Windows
