--- a/Face_Verification/requirements.txt
+++ b/Face_Verification/requirements.txt
@@ -1,7 +1,6 @@
 deepface==0.0.83
 mediapipe==0.10.13
-opencv-python-headless>=4.5.5.64
-
+opencv-python == 4.11.0.86
 matplotlib==3.8.3
 numpy==1.26.4
 tensorflow==2.16.1 ; platform_system != 'Windows'  # Windows doesn't support tf 2.12.0 via pip
